Fix align-full in editor preview

--- a/apps/dashboard/src/components/editor/style.scss
+++ b/apps/dashboard/src/components/editor/style.scss
@@ -59,6 +59,11 @@ html.interface-interface-skeleton__html-container {
 		position: relative;
 	}
 
+	.block-editor-block-list__layout.is-root-container {
+		padding-left: 0;
+		padding-right: 0;
+	}
+
 	.components-panel__header.edit-post-sidebar__panel-tabs ul {
 			padding: 0
 	}
